# csv-median-calculator

./: # Тестовое задание для C++ разработчика.docx  CMakeLists.txt  README.md  config.toml  specs.md
examples/output/: median_result.csv
src/: config_parser.hpp  csv_reader.hpp  main.cpp  median_calculator.hpp
